ros-install.log
npm WARN deprecated @types/winston@2.4.4: This is a stub types definition. winston provides its own type definitions, so you do not need this installed.
npm WARN deprecated uws@10.148.0: New code is available at github.com/uNetworking/uWebSockets.js
npm WARN deprecated core-js@2.6.11: core-js@<3 is no longer maintained and not recommended for usage due to the number of issues. Please, upgrade your dependencies to the actual version of core-js@3.
npm WARN deprecated request@2.88.2: request has been deprecated, see https://github.com/request/request/issues/3142
npm WARN deprecated core-js@1.2.7: core-js@<3 is no longer maintained and not recommended for usage due to the number of issues. Please, upgrade your dependencies to the actual version of core-js@3.
/home/linus/.nvm/versions/node/v12.16.3/bin/ros -> /home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/realm-object-server/dist/cli.js

> diskusage@0.2.6 install /home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/realm-object-server/node_modules/diskusage
> node-gyp rebuild

make: Entering directory '/home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/realm-object-server/node_modules/diskusage/build'
  CXX(target) Release/obj.target/diskusage/src/main.o
../src/main.cpp: In function ‘v8::Local<v8::Object> ConvertDiskUsage(const DiskUsage&)’:
../src/main.cpp:9:124: warning: ‘bool v8::Object::Set(v8::Local<v8::Value>, v8::Local<v8::Value>)’ is deprecated: Use maybe version [-Wdeprecated-declarations]
     obj->Set(Nan::New<v8::String>("available").ToLocalChecked(), Nan::New<v8::Number>(static_cast<double>(usage.available)));
                                                                                                                            ^
In file included from /home/linus/.cache/node-gyp/12.16.3/include/node/v8-internal.h:14:0,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:27,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/node.h:67,
                 from ../../nan/nan.h:56,
                 from ../src/main.cpp:3:
/home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:3499:22: note: declared here
                 bool Set(Local<Value> key, Local<Value> value));
                      ^
/home/linus/.cache/node-gyp/12.16.3/include/node/v8config.h:328:3: note: in definition of macro ‘V8_DEPRECATED’
   declarator __attribute__((deprecated(message)))
   ^~~~~~~~~~
../src/main.cpp:10:114: warning: ‘bool v8::Object::Set(v8::Local<v8::Value>, v8::Local<v8::Value>)’ is deprecated: Use maybe version [-Wdeprecated-declarations]
     obj->Set(Nan::New<v8::String>("free").ToLocalChecked(), Nan::New<v8::Number>(static_cast<double>(usage.free)));
                                                                                                                  ^
In file included from /home/linus/.cache/node-gyp/12.16.3/include/node/v8-internal.h:14:0,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:27,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/node.h:67,
                 from ../../nan/nan.h:56,
                 from ../src/main.cpp:3:
/home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:3499:22: note: declared here
                 bool Set(Local<Value> key, Local<Value> value));
                      ^
/home/linus/.cache/node-gyp/12.16.3/include/node/v8config.h:328:3: note: in definition of macro ‘V8_DEPRECATED’
   declarator __attribute__((deprecated(message)))
   ^~~~~~~~~~
../src/main.cpp:11:116: warning: ‘bool v8::Object::Set(v8::Local<v8::Value>, v8::Local<v8::Value>)’ is deprecated: Use maybe version [-Wdeprecated-declarations]
     obj->Set(Nan::New<v8::String>("total").ToLocalChecked(), Nan::New<v8::Number>(static_cast<double>(usage.total)));
                                                                                                                    ^
In file included from /home/linus/.cache/node-gyp/12.16.3/include/node/v8-internal.h:14:0,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:27,
                 from /home/linus/.cache/node-gyp/12.16.3/include/node/node.h:67,
                 from ../../nan/nan.h:56,
                 from ../src/main.cpp:3:
/home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:3499:22: note: declared here
                 bool Set(Local<Value> key, Local<Value> value));
                      ^
/home/linus/.cache/node-gyp/12.16.3/include/node/v8config.h:328:3: note: in definition of macro ‘V8_DEPRECATED’
   declarator __attribute__((deprecated(message)))
   ^~~~~~~~~~
../src/main.cpp: In function ‘Nan::NAN_METHOD_RETURN_TYPE GetDiskUsage(Nan::NAN_METHOD_ARGS_TYPE)’:
../src/main.cpp:26:71: error: no matching function for call to ‘v8::String::Utf8Value::Utf8Value(v8::Local<v8::Value>)’
         DiskUsage result = GetDiskUsage(*v8::String::Utf8Value(info[0]));
                                                                       ^
In file included from /home/linus/.cache/node-gyp/12.16.3/include/node/node.h:67:0,
                 from ../../nan/nan.h:56,
                 from ../src/main.cpp:3:
/home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:3135:5: note: candidate: v8::String::Utf8Value::Utf8Value(v8::Isolate*, v8::Local<v8::Value>)
     Utf8Value(Isolate* isolate, Local<v8::Value> obj);
     ^~~~~~~~~
/home/linus/.cache/node-gyp/12.16.3/include/node/v8.h:3135:5: note:   candidate expects 2 arguments, 1 provided
../src/main.cpp: At global scope:
../src/main.cpp:37:15: error: variable or field ‘Init’ declared void
 void Init(v8::Handle<v8::Object> exports)
               ^~~~~~
../src/main.cpp:37:15: error: ‘Handle’ is not a member of ‘v8’
../src/main.cpp:37:32: error: expected primary-expression before ‘>’ token
 void Init(v8::Handle<v8::Object> exports)
                                ^
../src/main.cpp:37:34: error: ‘exports’ was not declared in this scope
 void Init(v8::Handle<v8::Object> exports)
                                  ^~~~~~~
In file included from ../../nan/nan.h:56:0,
                 from ../src/main.cpp:3:
../src/main.cpp:42:24: error: ‘Init’ was not declared in this scope
 NODE_MODULE(diskusage, Init)
                        ^
/home/linus/.cache/node-gyp/12.16.3/include/node/node.h:608:36: note: in definition of macro ‘NODE_MODULE_X’
       (node::addon_register_func) (regfunc),                          \
                                    ^~~~~~~
../src/main.cpp:42:1: note: in expansion of macro ‘NODE_MODULE’
 NODE_MODULE(diskusage, Init)
 ^~~~~~~~~~~
../src/main.cpp:42:24: note: suggested alternative:
 NODE_MODULE(diskusage, Init)
                        ^
/home/linus/.cache/node-gyp/12.16.3/include/node/node.h:608:36: note: in definition of macro ‘NODE_MODULE_X’
       (node::addon_register_func) (regfunc),                          \
                                    ^~~~~~~
../src/main.cpp:42:1: note: in expansion of macro ‘NODE_MODULE’
 NODE_MODULE(diskusage, Init)
 ^~~~~~~~~~~
/home/linus/.cache/node-gyp/12.16.3/include/node/node.h:225:18: note:   ‘node::Init’
 NODE_EXTERN void Init(int* argc,
                  ^~~~
In file included from ../src/main.cpp:3:0:
../src/main.cpp:21:19: warning: ‘Nan::NAN_METHOD_RETURN_TYPE GetDiskUsage(Nan::NAN_METHOD_ARGS_TYPE)’ defined but not used [-Wunused-function]
 static NAN_METHOD(GetDiskUsage)
                   ^
../../nan/nan.h:1568:33: note: in definition of macro ‘NAN_METHOD’
     Nan::NAN_METHOD_RETURN_TYPE name(Nan::NAN_METHOD_ARGS_TYPE info)
                                 ^~~~
diskusage.target.mk:114: recipe for target 'Release/obj.target/diskusage/src/main.o' failed
make: *** [Release/obj.target/diskusage/src/main.o] Error 1
make: Leaving directory '/home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/realm-object-server/node_modules/diskusage/build'
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack     at ChildProcess.onExit (/home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/npm/node_modules/node-gyp/lib/build.js:194:23)
gyp ERR! stack     at ChildProcess.emit (events.js:310:20)
gyp ERR! stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:275:12)
gyp ERR! System Linux 5.0.0-32-generic
gyp ERR! command "/home/linus/.nvm/versions/node/v12.16.3/bin/node" "/home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/npm/node_modules/node-gyp/bin/node-gyp.js" "rebuild"
gyp ERR! cwd /home/linus/.nvm/versions/node/v12.16.3/lib/node_modules/realm-object-server/node_modules/diskusage
gyp ERR! node -v v12.16.3
gyp ERR! node-gyp -v v5.1.0
gyp ERR! not ok 
npm WARN deprecated-react-native-listview@0.0.6 requires a peer of react@* but none is installed. You must install peer dependencies yourself.
npm WARN deprecated-react-native-listview@0.0.6 requires a peer of react-native@* but none is installed. You must install peer dependencies yourself.

npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! diskusage@0.2.6 install: `node-gyp rebuild`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the diskusage@0.2.6 install script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/linus/.npm/_logs/2020-05-05T08_51_43_098Z-debug.log
